@@ -1,63 +1,76 @@
 package fr.nocsy.mcpets.utils;
 
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
-import fr.nocsy.mcpets.MCPets;
-import fr.nocsy.mcpets.data.config.BlacklistConfig;
-import io.lumine.mythic.api.skills.Skill;
-import me.clip.placeholderapi.PlaceholderAPI;
-import net.kyori.adventure.audience.Audience;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
-import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.entity.Player;
-import org.bukkit.event.Event;
-import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.SkullMeta;
-import org.bukkit.profile.PlayerProfile;
-import org.bukkit.profile.PlayerTextures;
-import org.jetbrains.annotations.NotNull;
-
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.MalformedURLException;
+
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.logging.Level;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.concurrent.CompletableFuture;
+
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.Material;
+import org.bukkit.event.Event;
+import org.bukkit.block.Block;
+import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemStack;
+import org.bukkit.profile.PlayerProfile;
+import org.bukkit.profile.PlayerTextures;
+import org.bukkit.inventory.meta.SkullMeta;
+
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.minimessage.MiniMessage;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+
+import io.lumine.mythic.api.skills.Skill;
+
+import org.jetbrains.annotations.NotNull;
+
+import me.clip.placeholderapi.PlaceholderAPI;
+
+import fr.nocsy.mcpets.MCPets;
+import fr.nocsy.mcpets.data.config.GlobalConfig;
+import fr.nocsy.mcpets.data.config.BlacklistConfig;
 
 public class Utils {
 
-    public static ItemStack createHead(final String name, final List<String> lore, final String base64) {
+    private static final Pattern LEGACY_PATTERN = Pattern.compile("(?i)[&§]([0-9A-FK-OR])");
+
+    private static final Pattern HEX_PATTERN =
+            Pattern.compile("(?i)§x§([A-F0-9])§([A-F0-9])§([A-F0-9])§([A-F0-9])§([A-F0-9])§([A-F0-9])");
+
+    private static final Pattern RAW_HEX_PATTERN = Pattern.compile("(?i)(?<![<:#])#([A-F0-9]{6})");
+
+    public static ItemStack createHead(final String name, final List<Component> lore, final String base64) {
         final ItemStack item = new ItemStack(Material.PLAYER_HEAD);
         final SkullMeta meta = (SkullMeta) item.getItemMeta();
-        meta.setDisplayName(name);
-        meta.setLore(lore);
+        meta.displayName(Utils.toComponent(name));
+        meta.lore(lore);
         try {
             final byte[] decodedBytes = Base64.getDecoder().decode(base64);
             final String decodedString = new String(decodedBytes);
 
-            final JsonParser parser = new JsonParser();
-            final JsonObject jsonObject = parser.parse(decodedString).getAsJsonObject();
+            final JsonObject jsonObject = JsonParser.parseString(decodedString).getAsJsonObject();
             final String url = jsonObject.getAsJsonObject("textures").getAsJsonObject("SKIN").get("url").getAsString();
 
-            final PlayerProfile pp = Bukkit.createPlayerProfile(UUID.fromString("4fbecd49-c7d4-4c18-8410-adf7a7348728"));
+            final PlayerProfile pp = Bukkit.createPlayerProfile(UUID.fromString("4fbecd49-c7d4-4c18-8410-adf7a7348728"), "MCPets");
             final PlayerTextures pt = pp.getTextures();
 
             URL urlObject = null;
             try {
-                urlObject = new URL(url);
-            }
-            catch (final MalformedURLException e) {
+                urlObject = URI.create(url).toURL();
+            } catch (final IllegalArgumentException | MalformedURLException e) {
                 try {
-                    urlObject = new URL("http://textures.minecraft.net/texture/8dcfabbbb4d7b0381135bf07b6af3de920ab4c366c06c37fa4c4e8b8f43bbb2b");
-                }
-                catch (final MalformedURLException malformedURLException) {
-                    MCPets.getLog().log(Level.SEVERE, "Failed to parse fallback texture URL", malformedURLException);
+                    urlObject = URI.create("http://textures.minecraft.net/texture/8dcfabbbb4d7b0381135bf07b6af3de920ab4c366c06c37fa4c4e8b8f43bbb2b").toURL();
+                } catch (final IllegalArgumentException | MalformedURLException ex) {
+                    MCPets.getLog().log(Level.SEVERE, "Failed to parse fallback texture URL", ex);
                 }
             }
 
@@ -90,6 +103,20 @@ public class Utils {
     /**
      * Location bruiser
      */
+    /**
+     * Check that a location has enough vertical clearance to spawn a mount
+     * (feet + head block must both be passable). Used to prevent the mount
+     * wall-clip exploit where a mount spawned inside a solid block lets the
+     * rider end up clipped into geometry.
+     */
+    public static boolean isLocationClearForMount(final Location loc) {
+        if (loc == null || loc.getWorld() == null)
+            return false;
+        final Block feet = loc.getBlock();
+        final Block head = loc.clone().add(0, 1, 0).getBlock();
+        return feet.isPassable() && head.isPassable();
+    }
+
     public static Location bruised(Location loc, final double distance) {
         final Location origin = loc.clone();
 
@@ -115,33 +142,118 @@ public class Utils {
         return loc;
     }
 
-    /**
-     * Translate hexadecimal colors
-     */
-    public static String hex(String message) {
-        final Pattern pattern = Pattern.compile("#[a-fA-F0-9]{6}");
-        Matcher matcher = pattern.matcher(message);
+    public static String convertLegacyToMiniMessage(String input) {
+        Matcher matcher = LEGACY_PATTERN.matcher(input);
+        StringBuilder result = new StringBuilder();
+
         while (matcher.find()) {
-            final String hexCode = message.substring(matcher.start(), matcher.end());
-            final String replaceSharp = hexCode.replace('#', 'x');
+            String replacement = switch (matcher.group(1).toLowerCase()) {
+                case "0" -> "<black>";
+                case "1" -> "<dark_blue>";
+                case "2" -> "<dark_green>";
+                case "3" -> "<dark_aqua>";
+                case "4" -> "<dark_red>";
+                case "5" -> "<dark_purple>";
+                case "6" -> "<gold>";
+                case "7" -> "<gray>";
+                case "8" -> "<dark_gray>";
+                case "9" -> "<blue>";
+                case "a" -> "<green>";
+                case "b" -> "<aqua>";
+                case "c" -> "<red>";
+                case "d" -> "<light_purple>";
+                case "e" -> "<yellow>";
+                case "f" -> "<white>";
 
-            final char[] ch = replaceSharp.toCharArray();
-            final StringBuilder builder = new StringBuilder();
-            for (final char c : ch) {
-                builder.append("&" + c);
-            }
+                case "k" -> "<obfuscated>";
+                case "l" -> "<bold>";
+                case "m" -> "<strikethrough>";
+                case "n" -> "<underlined>";
+                case "o" -> "<italic>";
+                case "r" -> "<reset>";
 
-            message = message.replace(hexCode, builder.toString());
-            matcher = pattern.matcher(message);
+                default -> matcher.group();
+            };
+
+            matcher.appendReplacement(result, Matcher.quoteReplacement(replacement));
         }
-        return ChatColor.translateAlternateColorCodes('&', message);
+
+        matcher.appendTail(result);
+
+        return result.toString();
+    }
+
+    public static String convertRawHexToMiniMessage(String text) {
+        Matcher matcher = RAW_HEX_PATTERN.matcher(text);
+        StringBuilder sb = new StringBuilder();
+
+        while (matcher.find()) {
+            matcher.appendReplacement(sb, "<color:#" + matcher.group(1) + ">");
+        }
+
+        matcher.appendTail(sb);
+
+        return sb.toString();
+    }
+
+    public static String convertSectionHexToMiniMessage(String input) {
+        Matcher matcher = HEX_PATTERN.matcher(input);
+
+        StringBuilder result = new StringBuilder();
+
+        while (matcher.find()) {
+            String hex =
+                    matcher.group(1)
+                            + matcher.group(2)
+                            + matcher.group(3)
+                            + matcher.group(4)
+                            + matcher.group(5)
+                            + matcher.group(6);
+
+            matcher.appendReplacement(result, Matcher.quoteReplacement("<color:#" + hex + ">"));
+        }
+
+        matcher.appendTail(result);
+
+        return result.toString();
     }
 
     /**
      * Convert a legacy color-coded string (§ codes) to an Adventure Component
      */
-    public static Component toComponent(final String legacyText) {
-        return LegacyComponentSerializer.legacySection().deserialize(legacyText);
+    public static Component toComponent(String text) {
+        if (text == null) return Component.empty();
+
+        text = convertRawHexToMiniMessage(text);
+        text = convertSectionHexToMiniMessage(text);
+        text = convertLegacyToMiniMessage(text);
+
+        try {
+            return MiniMessage.miniMessage().deserialize(text).decoration(TextDecoration.ITALIC, false);
+        } catch (final Exception ex) {
+            return Component.text(text).decoration(TextDecoration.ITALIC, false);
+        }
+    }
+
+    public static Component toComponentWithPrefix(String text) {
+        if (text == null) return Component.empty();
+
+        text = GlobalConfig.getInstance().getPrefix() + text;
+        text = convertRawHexToMiniMessage(text);
+        text = convertSectionHexToMiniMessage(text);
+        text = convertLegacyToMiniMessage(text);
+
+        try {
+            return MiniMessage.miniMessage().deserialize(text).decoration(TextDecoration.ITALIC, false);
+        } catch (final Exception ex) {
+            return Component.text(text).decoration(TextDecoration.ITALIC, false);
+        }
+    }
+
+    public static List<Component> toComponents(String text) {
+        return Arrays.stream(text.split("\n"))
+                .map(Utils::toComponent)
+                .toList();
     }
 
     /**
@@ -149,10 +261,6 @@ public class Utils {
      */
     public static String stripColors(final String text) {
         return PlainTextComponentSerializer.plainText().serialize(toComponent(text));
-    }
-
-    public static void sendActionBar(final Player p, final String message) {
-        ((Audience) p).sendActionBar(toComponent(message));
     }
 
     /**
@@ -174,10 +282,8 @@ public class Utils {
      * Return an empty string if it's negative to prevent duplicating issue
      */
     public static String getSignSymbol(final double value) {
-        if (value < 0)
-            return "";
-        else
-            return "+";
+        if (value < 0) return "";
+        else return "+";
     }
 
     /**
@@ -192,9 +298,7 @@ public class Utils {
      */
     public static void debug(final String msg) {
         final Player p = Bukkit.getPlayer("Nocsy");
-        if (p != null) {
-            p.sendMessage(msg);
-        }
+        if (p != null) p.sendMessage(msg);
         MCPets.getLog().severe("[DEBUG]: " + msg);
     }
 
@@ -258,37 +362,17 @@ public class Utils {
     }
 
     /**
-     * Translate the string to hex color code
-     */
-    public static String translateHexColorCodes(final String startTag, final String endTag, final String message) {
-        final char COLOR_CHAR = ChatColor.COLOR_CHAR;
-        final Pattern hexPattern = Pattern.compile(startTag + "([A-Fa-f0-9]{6})" + endTag);
-        final Matcher matcher = hexPattern.matcher(message);
-        final StringBuffer buffer = new StringBuffer(message.length() + 4 * 8);
-        while (matcher.find()) {
-            final String group = matcher.group(1);
-            matcher.appendReplacement(buffer, COLOR_CHAR + "x"
-                    + COLOR_CHAR + group.charAt(0) + COLOR_CHAR + group.charAt(1)
-                    + COLOR_CHAR + group.charAt(2) + COLOR_CHAR + group.charAt(3)
-                    + COLOR_CHAR + group.charAt(4) + COLOR_CHAR + group.charAt(5)
-            );
-        }
-        return matcher.appendTail(buffer).toString();
-    }
-
-    /**
      * Check if a string is a numerical expression
      */
     public static boolean isNumeric(final String strNum) {
-        if (strNum == null) {
-            return false;
-        }
+        if (strNum == null) return false;
+
         try {
             final double d = Double.parseDouble(strNum);
-        }
-        catch (final NumberFormatException nfe) {
+        } catch (final NumberFormatException nfe) {
             return false;
         }
+
         return true;
     }
 
@@ -296,12 +380,11 @@ public class Utils {
         if (MCPets.getPlaceholderAPI() == null) {
             return msg;
         }
-        if (uuid == null)
-            uuid = UUID.randomUUID();
+        if (uuid == null) uuid = UUID.randomUUID();
         final Player p = Bukkit.getPlayer(uuid);
-        if (p == null)
+        if (p == null) {
             return PlaceholderAPI.setPlaceholders(Bukkit.getOfflinePlayer(uuid), msg);
-
+        }
         return PlaceholderAPI.setPlaceholders(p, msg);
     }
 
@@ -309,4 +392,5 @@ public class Utils {
         final Optional<Skill> optionalSkill = MCPets.getMythicMobs().getSkillManager().getSkill(skillName);
         return optionalSkill.orElse(null);
     }
+
 }
